--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,5 @@ gen/
 *.ipr
 .mvn
 mvnw*
-src/main/java/edu/gy/personalmanagersystem/utils/
 src/test/
+!/src/main/resources/mybatis-generator-config.xml
