--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,8 @@
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://127.0.0.1:3306/PersonalManagerSystem?characterEncoding=utf-8
 username=root
-password=gjfmysql1104/
+# password=gjfmysql1104/
+password=123
 #\u5B9A\u4E49\u521D\u59CB\u8FDE\u63A5\u6570
 initialSize=0
 #\u5B9A\u4E49\u6700\u5927\u8FDE\u63A5\u6570
